--- a/GUI/GUI_with_error_tolerance_field_integrated.ipynb
+++ b/GUI/GUI_with_error_tolerance_field_integrated.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "6776c76e",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,8 @@
     "    # Colour personalizations \n",
     "    sg.theme('SandyBeach')\n",
     "    #Layout Initialization to get the overall GUI setup \n",
-    "    layout =  [[sg.In() ,sg.FileBrowse(file_types=((\"Excel Files\", \"*.xlsx\"),))],  #File browser to select Excel file with data\n",
+    "    layout =  [[sg.Text('Choose the Excel file in CDF form')],\n",
+    "            [sg.In() ,sg.FileBrowse(file_types=((\"Excel Files\", \"*.xlsx\"),))],  #File browser to select Excel file with data\n",
     "               [sg.Text('error tolerance', size =(15, 1)), sg.InputText()] ,       #Error Tolerance text box so it can be changed as per specs of user\n",
     "               [sg.Submit(), sg.Cancel()]]                                         #Buttons to submit/cancel\n",
     "    window = sg.Window('Ladder Iterative Load Flow Calculator', layout)            #GUI heading\n",
@@ -30,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "5bd7370f",
    "metadata": {},
    "outputs": [
@@ -38,8 +39,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None None None\n",
-      "0.0001\n"
+      "Cancel  \n"
      ]
     }
    ],
