Conda environment list

--- a/Data Parser/Data Parser.ipynb
+++ b/Data Parser/Data Parser.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 1,
    "id": "531a1f77",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 8,
    "id": "4bc5c15c",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 9,
    "id": "d4ad0d0e",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 10,
    "id": "fd4daf57",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 11,
    "id": "c2b56eed",
    "metadata": {
     "scrolled": true
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 12,
    "id": "7d1ef855",
    "metadata": {},
    "outputs": [
@@ -476,47 +476,304 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 14,
    "id": "a5096895",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 2.     19.      0.1023  0.0976]\n",
-      " [19.     20.      0.9385  0.8457]\n",
-      " [20.     21.      0.2555  0.2985]\n",
-      " [21.     22.      0.4423  0.5848]\n",
-      " [ 2.      3.      0.3076  0.1567]\n",
-      " [ 3.     23.      0.2815  0.1924]\n",
-      " [23.     24.      0.5603  0.4424]\n",
-      " [24.     25.      0.559   0.4374]\n",
-      " [ 3.      4.      0.2284  0.1163]\n",
-      " [ 4.      5.      0.2378  0.1211]\n",
-      " [ 5.      6.      0.511   0.4411]\n",
-      " [ 6.     26.      0.1267  0.0645]\n",
-      " [26.     27.      0.1773  0.0903]\n",
-      " [27.     28.      0.6607  0.5826]\n",
-      " [28.     29.      0.5018  0.4371]\n",
-      " [29.     30.      0.3166  0.1613]\n",
-      " [30.     31.      0.608   0.6008]\n",
-      " [31.     32.      0.1937  0.2258]\n",
-      " [32.     33.      0.2128  0.3308]\n",
-      " [ 6.      7.      0.1168  0.3861]\n",
-      " [ 7.      8.      0.4439  0.1467]\n",
-      " [ 8.      9.      0.6426  0.4617]\n",
-      " [ 9.     10.      0.6514  0.4617]\n",
-      " [10.     11.      0.1227  0.0406]\n",
-      " [11.     12.      0.2336  0.081 ]\n",
-      " [12.     13.      0.9159  0.7206]\n",
-      " [13.     14.      0.3379  0.4448]\n",
-      " [14.     15.      0.3687  0.3282]\n",
-      " [15.     16.      0.4656  0.34  ]\n",
-      " [16.     17.      0.8042  1.0738]\n",
-      " [17.     18.      0.4567  0.3581]\n",
-      " [ 0.      0.      0.      0.    ]]\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>0.2815</td>\n",
+       "      <td>0.1924</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>23.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>0.5603</td>\n",
+       "      <td>0.4424</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>24.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>0.5590</td>\n",
+       "      <td>0.4374</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.2284</td>\n",
+       "      <td>0.1163</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.2378</td>\n",
+       "      <td>0.1211</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.5110</td>\n",
+       "      <td>0.4411</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>6.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>0.1267</td>\n",
+       "      <td>0.0645</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>26.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>0.1773</td>\n",
+       "      <td>0.0903</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>27.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>0.6607</td>\n",
+       "      <td>0.5826</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>28.0</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>0.5018</td>\n",
+       "      <td>0.4371</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>29.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>0.3166</td>\n",
+       "      <td>0.1613</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>30.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>0.6080</td>\n",
+       "      <td>0.6008</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>31.0</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>0.1937</td>\n",
+       "      <td>0.2258</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>32.0</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>0.2128</td>\n",
+       "      <td>0.3308</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>6.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.1168</td>\n",
+       "      <td>0.3861</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>7.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.4439</td>\n",
+       "      <td>0.1467</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>8.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0.6426</td>\n",
+       "      <td>0.4617</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>9.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.6514</td>\n",
+       "      <td>0.4617</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>0.1227</td>\n",
+       "      <td>0.0406</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>11.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>0.2336</td>\n",
+       "      <td>0.0810</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>12.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>0.9159</td>\n",
+       "      <td>0.7206</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>13.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>0.3379</td>\n",
+       "      <td>0.4448</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>14.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>0.3687</td>\n",
+       "      <td>0.3282</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>15.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>0.4656</td>\n",
+       "      <td>0.3400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>16.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>0.8042</td>\n",
+       "      <td>1.0738</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>17.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>0.4567</td>\n",
+       "      <td>0.3581</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>19.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>0.9385</td>\n",
+       "      <td>0.8457</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>20.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>0.2555</td>\n",
+       "      <td>0.2985</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>21.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>0.4423</td>\n",
+       "      <td>0.5848</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       0     1       2       3\n",
+       "0    3.0  23.0  0.2815  0.1924\n",
+       "1   23.0  24.0  0.5603  0.4424\n",
+       "2   24.0  25.0  0.5590  0.4374\n",
+       "3    3.0   4.0  0.2284  0.1163\n",
+       "4    4.0   5.0  0.2378  0.1211\n",
+       "5    5.0   6.0  0.5110  0.4411\n",
+       "6    6.0  26.0  0.1267  0.0645\n",
+       "7   26.0  27.0  0.1773  0.0903\n",
+       "8   27.0  28.0  0.6607  0.5826\n",
+       "9   28.0  29.0  0.5018  0.4371\n",
+       "10  29.0  30.0  0.3166  0.1613\n",
+       "11  30.0  31.0  0.6080  0.6008\n",
+       "12  31.0  32.0  0.1937  0.2258\n",
+       "13  32.0  33.0  0.2128  0.3308\n",
+       "14   6.0   7.0  0.1168  0.3861\n",
+       "15   7.0   8.0  0.4439  0.1467\n",
+       "16   8.0   9.0  0.6426  0.4617\n",
+       "17   9.0  10.0  0.6514  0.4617\n",
+       "18  10.0  11.0  0.1227  0.0406\n",
+       "19  11.0  12.0  0.2336  0.0810\n",
+       "20  12.0  13.0  0.9159  0.7206\n",
+       "21  13.0  14.0  0.3379  0.4448\n",
+       "22  14.0  15.0  0.3687  0.3282\n",
+       "23  15.0  16.0  0.4656  0.3400\n",
+       "24  16.0  17.0  0.8042  1.0738\n",
+       "25  17.0  18.0  0.4567  0.3581\n",
+       "26  19.0  20.0  0.9385  0.8457\n",
+       "27  20.0  21.0  0.2555  0.2985\n",
+       "28  21.0  22.0  0.4423  0.5848\n",
+       "29   0.0   0.0  0.0000  0.0000\n",
+       "30   0.0   0.0  0.0000  0.0000\n",
+       "31   0.0   0.0  0.0000  0.0000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -590,23 +847,17 @@
     "        i = i + 1\n",
     "    \n",
     "    \n",
-    "    print(newBranchDataArr)"
+    "    # To display\n",
+    "    x = pd.DataFrame(newBranchDataArr)\n",
+    "    display(x)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "e45c699c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(array([13], dtype=int64),)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
